manifests/service-stage.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api-taxer
  namespace: intranet-stage
spec:
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  selector:
    app: api-taxer
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: client-taxer
  namespace: intranet-stage
spec:
  ports:
    - port: 80
      targetPort: client-taxer
      protocol: TCP
  selector:
    app: client-taxer
  type: ClusterIP
